5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1662_2970.log
== TEST (2019-04-15 15:48:56) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Qf = 1 milhao e 42 mil
Qo = 1.500,00 

"x**(1/y)"

if (i <= 0.01)

-- ERROR:
File "XXXX", line 3
    Qf = 1 milhao e 42 mil
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:04) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Qf = 1.042.000
Qo = 1.500.00 

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
File "XXXX", line 3
    Qf = 1.042.000
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:28) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Qf = (1.042.000)
Qo = 1.500.00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
File "XXXX", line 3
    Qf = (1.042.000)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:38) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = (1.042.000)0
Qo = 1.500.00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
File "XXXX", line 3
    Q1 = (1.042.000)0
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:51:43) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = (1.042.000)
Qo = 1.500.00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
File "XXXX", line 3
    Q1 = (1.042.000)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:07) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500.00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
File "XXXX", line 4
    Qo = 1.500.00
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:15) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:27) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:31) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:52:34) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- EXECUTION TIME:
0.160802
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2970/main.py", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:52:54) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:16) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:20) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:21) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:22) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:23) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:23) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:23) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:23) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:23) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:24) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:53:54) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- EXECUTION TIME:
0.157676
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2970/main.py", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:53:59) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:13) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:14) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:15) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:17) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:54:17) 
-- CODE:
investimento = input("tempo de investimento (meses): ")

Q1 = 1.042,000
Qo = 1.500,00

"x**(1/y)"

if (i <= 0.01):
 taxa = (real)
else: 
 taxa = (Irreal)
print(taxa)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    if (i <= 0.01):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
